name:                advent
version:             0
build-type:          Simple
cabal-version:       >=1.10

executable haskell
  hs-source-dirs:      src
  main-is:             main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base, bytestring, vector, formatting, clock
  default-language:    Haskell2010
